# spaces

./: .gitignore  README.md  environment.yaml  meta.yaml  requirements.txt  scratch.py  setup.cfg  setup.py
src/spaces/: __main__.py
src/spaces/analysis/: __main__.py  analyzer.py  example_analyzer.py  gaussian_analyzer.py  mixture_analyzer.py  sentence_analyzer.py
src/spaces/data/: activity.py  query.py  region.py  region_type.py  result.py  tweet.py
src/spaces/scraper/: __main__.py  parser.py  scraper.py  twint_parser.py  twint_scraper.py
