[metadata]
name = spaces
version = attr: spaces.__version__
url = https://github.com/ubcdsci/
project_urls =
    Source Code = https://github.com/ubcdsci/spaces
    Issue Tracker = https://github.com/ubcdsci/spaces/issues/
license = BSD-3-Clause
license_files = LICENSE
maintainer = AMS Data Science Club @ UBC
maintainer_email = datascienceclububc@gmail.com
long_description = file: README.me
long_description_content_type = text/markdown
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python

[options]
packages = find:
package_dir = = src
include_package_data = true
python_requires = >= 3.7
install_requires=
    numpy
    pandas
    matplotlib
    pyyaml

[options.packages.find]
where = src

;[tool:pytest]
;testpaths = tests
;filterwarnings =
;    error
;
;[coverage:run]
;branch = true
;source =
;    click
;    tests